--- a/ThreadExample1/pom.xml
+++ b/ThreadExample1/pom.xml
@@ -8,6 +8,15 @@
     <artifactId>ThreadExample1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!--logger-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.13</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <defaultGoal>package</defaultGoal>
         <plugins>
