--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,13 @@
 
     <groupId>org.konurbaev</groupId>
     <artifactId>ThreadExample</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>ThreadExample1-SynchronizedWaitNotify</module>
         <module>ThreadExample2-LinkedTransferQueue</module>
         <module>ThreadExample3-Semaphore</module>
+        <module>ThreadExample4-Exchanger</module>
     </modules>
 
 </project>
