added jacoco and findbugs integration

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,7 @@
-.gradle
-/build/
-!gradle/wrapper/gradle-wrapper.jar
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
-/frontend/npm-debug.log
-
-### Log files ###
-npm-debug.log
-*.log
-
-### Prop files ###
-/backend/src/main/resources/application-local.properties
+dependency-reduced-pom.xml
